# stonks

./: .gitignore  README.md  pyproject.toml
configs/: EQUITY_L.csv
datasets/: full_data.parquet
stonks/: Analysis.ipynb  Code.ipynb  app.py  create_data.py  download_base_data.py  main.py  metrics.py  modules.py  refresh_data.py
