[tool.poetry]
name = "stonks"
version = "0.1.0"
description = ""
authors = ["Akash <akash.iitr17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
yfinance = "^0.2.35"
pandas = "^2.1.4"
yahoo-ticker-downloader = "^3.0.1"
tqdm = "^4.66.2"
pyarrow = "^15.0.2"
fastparquet = "^2024.2.0"
dash = "^2.16.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
